--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -7,5 +7,17 @@
         <strong>Symbol: </strong> <%= @stock.ticker %>
         <strong>Name: </strong> <%= @stock.name %>
         <strong>Price: </strong> <%= @stock.last_price %>
+        <% if current_user.can_track_stock?(@stock.ticker) %>
+            <%= link_to 'Add to Portfolio',user_stocks_path(user: current_user,ticker: @stock.ticker),
+                                                            class: 'btn btn-success', method: :post %>
+        <% else %>
+            <span class='badge bg-secondary'>
+                <% if current_user.stock_already_tracked?(@stock.ticker)%>
+                    Already Tracking this stock
+                <% elsif !current_user.under_stock_limit? %>
+                    Already Tracking 10 Stocks
+                <% end %>
+            </span>
+        <% end %>
     </div>
 <% end  %>
