First and last Name fields added + Update functionality for Edit User Profile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,19 @@
 @import "bootstrap/dist/css/bootstrap";
 
+.root {
+  --bs-navbar-padding-x: 7rem;
+  --bs-navbar-padding-y: 0.5rem;
+}
+
 .logout-btn {
   margin-right: 5px;
+}
+
+.container {
+  padding: 0;
+}
+
+#navbar-custom {
+  padding-left: 7rem;
+  padding-right: 7rem;
 }
