--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -12,3 +12,12 @@
 #result {
   margin-top: 10px;
 }
+
+.user-name {
+  margin-top: 3.5%;
+  margin-right: 5px;
+  font-size: 1rem;
+  font-family: "Segoe UI", "Roboto", "Helvetica Neue", "Noto Sans",
+    "Liberation Sans", "Arial", "sans"-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
