--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,8 +1,6 @@
     <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container">
-      <div class="container-fluid">
+      <div class="container-fluid nav-container" id="navbar-custom">
         <%= link_to 'Finance Tracker', root_path , class: 'navbar-brand' %>
-
         <% if current_user %>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -17,10 +15,14 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                  Profile
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li>
+                  <%= link_to  edit_user_registration_path,class:'dropdown-item' do %>
+                  <%= fa_icon 'edit' %> Edit Profile
+                  <% end %>
+                  </li>
                   <li><a class="dropdown-item" href="#">Another action</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -28,6 +30,12 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+
+            <ul class="navbar-nav ml-auto">
+              <li class='nav-item user-name text-muted'>
+                <%= fa_icon 'user' %> <%= current_user.get_full_name %>
               </li>
             </ul>
 
@@ -44,5 +52,5 @@
           </div>
         <% end %>
       </div>
-    </div>
+
     </nav>
