--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,7 +11,8 @@
                 <%= link_to 'My Portfolio', my_portfolio_path, class: "nav-link"%>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <%# <a class="nav-link" href="#">Friends</a> %>
+                <%= link_to 'Friends', my_friends_path,class:"nav-link"  %>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -27,9 +28,6 @@
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
               </li>
             </ul>
 
