Functionality added to follow user

--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -16,6 +16,9 @@
     <% end %>
 </div>
 
+<div id='friend-result'>
+</div>
+
 <% if !@friends.empty? %>
     <%= render 'friends/list' %>
 <% end  %>
