--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -15,8 +15,24 @@
                         <th scope="row"><%= stock.ticker %></th>
                         <td><%= stock.name %></td>
                         <td><%= stock.last_price %></td>
-                        <td><%= link_to 'Remove',user_stock_path(stock) ,method: :delete,data: {confirm: 'Are you sure?'},
-                                class:'btn btn-sm btn-warning' %></td>
+                        <td>
+                        <% if current_user.can_track_stock?(stock.ticker) %>
+                            <%= link_to 'Add to Portfolio',user_stocks_path(user: current_user,ticker: stock.ticker),
+                                                                            class: 'btn btn-success', method: :post %>
+                        <% elsif @user.id != current_user.id %>
+                            <span class='badge bg-secondary'>
+                                <% if current_user.stock_already_tracked?(stock.ticker)%>
+                                    Already Tracking this stock
+                                <% elsif !current_user.under_stock_limit? %>
+                                    Already Tracking 10 Stocks
+                                <% end %>
+                            </span>
+                        <% end %>
+                        <% if @user.id == current_user.id   %>
+                            <%= link_to 'Remove',user_stock_path(stock) ,method: :delete,data: {confirm: 'Are you sure?'},
+                                    class:'btn btn-sm btn-warning' %>
+                        <% end %>
+                        </td>
                     </tr>
                 <% end  %>
             </tbody>
